updating stores in server and adding libgdx to gradle in server

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,20 +1,22 @@
 plugins {
-    id 'java'
+  id 'java'
 }
 
 group = 'com.stardew'
 version = 'unspecified'
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    implementation project(':common')
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+  implementation project(':common')
+  implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+  implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+  testImplementation platform('org.junit:junit-bom:5.10.0')
+  testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
 test {
-    useJUnitPlatform()
+  useJUnitPlatform()
 }
